--- a/cv.html
+++ b/cv.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cv Sebastian Zubieta</title>
+    <link rel="stylesheet" href="layout.css">
 </head>
+
 <body>
     <section>
         <h1>Sebastian Zubieta</h1>
         <img src="img/foto.jpg" Alt="Foto perfil" width=500px height=300px>
-        <h2>Edad:23</h2>
-        <h3>Domicilio:Balcarce 50</h3>
+        <h2 id="Edad">Edad:23</h2>
+        <h2 id="calle">Domicilio:Balcarce 50</h3>
         <h3>Peliculas que me gustan</h3>
         <ol>
             <li>Titaic</li>
@@ -24,13 +27,16 @@
             <li>Braking bad</li>
             <li>The office</li>
         </ol>
-        <h3>Perfil</h3>   
-        <p>Soy una persona bastante activa, me gusta estar siepre en movimiento. Amamnte de los deportes en general , bueno en ninguno. Juego futbol con amigos y corro regularmente.
+        <h3>Perfil</h3>
+        <p>Soy una persona bastante activa, me gusta estar siepre en movimiento. Amamnte de los deportes en general ,
+            bueno en ninguno. Juego futbol con amigos y corro regularmente.
         </p>
-        <p>Me gusta la lectura, ya sea ficcion o no ficcion.Puede ser filosofia , fisica , economia o novelas policiales</p>
+        <p>Me gusta la lectura, ya sea ficcion o no ficcion.Puede ser filosofia , fisica , economia o novelas policiales
+        </p>
         <p>Tambien me gusta el desarollo web y la programacion en general.</p>
-        <h4>Si queres contactane , completa el siguente <a href=img/formulario.html target=blank>formulario</a></h4>
+        <h4>Si queres contactane , completa el siguente <a id="boton" href=img/formulario.html target=blank>formulario</a></h4>
     </section>
-    
+
 </body>
+
 </html>
